...
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Future Reservations"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <!-- RecyclerView for displaying future reservations -->
                <androidx.recyclerview.widget.RecyclerView
...
