...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.709" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:text="Reserve Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
